Mirror tool tooltip in object mode: Mirror selected vertices? #47382

Closed
opened 2016-02-10 11:16:12 +01:00 by Reiner Prokein · 6 comments

System Information
Operating system and graphics card

win 7 64 bit, nvidia 760gtx

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Minor flaw. The tooltip for the mirror tool in Object Mode says: " Mirror selected vertices around one or more axes " . The word 'vertices' is imho wrong here since you cannot select vertices in Object Mode. And there is geometry that has no vertices at all, but can be mirrored by the mirror tool too.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Open Blender, stay in Object Mode, hover with the mouse over the Mirror button in the Tool Shelf. Have a look at the tooltip.

Possible solution: replace the word vertices by the word geometry. Then it fits to both modes again. And makes also more sense for geometry that has no vertices.

mirrorselectedvertsinobj.jpg

**System Information** Operating system and graphics card win 7 64 bit, nvidia 760gtx **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** Minor flaw. The tooltip for the mirror tool in Object Mode says: " Mirror selected vertices around one or more axes " . The word 'vertices' is imho wrong here since you cannot select vertices in Object Mode. And there is geometry that has no vertices at all, but can be mirrored by the mirror tool too. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open Blender, stay in Object Mode, hover with the mouse over the Mirror button in the Tool Shelf. Have a look at the tooltip. Possible solution: replace the word vertices by the word geometry. Then it fits to both modes again. And makes also more sense for geometry that has no vertices. ![mirrorselectedvertsinobj.jpg](https://archive.blender.org/developer/F281805/mirrorselectedvertsinobj.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tiles

Added subscriber: @tiles

This issue was referenced by 389a6a4c92

This issue was referenced by 389a6a4c92836fb27279a4dc6124d0a829c63e36

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

I went with "selected items" because that's what's used in tooltips of other transform tools.

I went with "selected items" because that's what's used in tooltips of other transform tools.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47382
No description provided.