Fix T47382: incorrect tooltip for mirror tool in object mode.